[package]
name = "rich-strong-lib"
version = "0.1.1"
edition = "2021"
description = "a Rust lib for rich-strong client and server"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version = "0.8.4",features = ["os-poll", "net"]}
enum-iterator = "1.1.2"
sni_shuffle = "0.1"
configparser = "3.0.0"
backtrace = "0.3"